# psydcar

./: README.md  pyproject.toml  pyrightconfig.json
backend/ksidecar/: __init__.py  api.py  cli.py  config.py  filesystem.py  index.py  mcp.py  paths.py  scanner.py  search.py  sidecars.py  vectors.py  watcher.py
backend/psydcar/: __init__.py  api.py  cli.py  config.py  filesystem.py  index.py  mcp.py  paths.py  scanner.py  search.py  sidecars.py  vectors.py  watcher.py
backend/psydecar/: __init__.py  api.py  cli.py  config.py  defaults.py  filesystem.py  index.py  mcp.py  paths.py  scanner.py  search.py  sidecars.py  vectors.py  watcher.py
backend/tests/: test_api.py  test_cli.py  test_filesystem.py  test_index.py  test_mcp.py  test_paths.py  test_scanner.py  test_search.py  test_sidecars.py  test_vectors.py  test_watcher.py
docs/: implementation_plan.md  knowledge_sidecar_spec.md
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/src/: styles.css
frontend/src/app/: api.service.ts  app.css  app.html  app.spec.ts  app.ts
frontend/src/app/ui/: metric-card.component.ts  panel.component.ts  section-header.component.ts  status-badge.component.ts
