[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ksidecar"
version = "0.1.0"
description = "Local-first knowledge sidecar proof of concept"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
semantic = [
  "lancedb>=0.17",
  "sentence-transformers>=3",
]

[dependency-groups]
dev = [
  "pyright>=1.1.409",
  "pytest>=8",
  "ruff>=0.4",
]

[project.scripts]
ksidecar = "ksidecar.cli:main"

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
