[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psydcar"
version = "0.1.0"
description = "Local-first psydcar proof of concept"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Psydcar contributors" }]
license = "MIT"
keywords = ["local-first", "search", "mcp", "knowledge-management"]
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "watchdog>=4.0",
]

[project.optional-dependencies]
semantic = [
  "lancedb>=0.17",
  "sentence-transformers>=3",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "pyright>=1.1.409",
  "pytest>=8",
  "ruff>=0.4",
]

[project.scripts]
psydcar = "psydcar.cli:main"

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]
include = ["psydcar*"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["backend"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
